--- a/03-CSS-Fundamentals/challange/style.css
+++ b/03-CSS-Fundamentals/challange/style.css
@@ -1,13 +1,32 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  border: 5px solid black;
   font-family: sans-serif;
   line-height: 1.5;
+}
+
+.container {
+  border: 5px solid black;
+  width: 70%;
+  margin: 5% auto;
 }
 
 h1 {
   background-color: rgb(239, 237, 237);
   text-transform: uppercase;
   text-align: center;
+  padding: 15px;
+}
+
+.article p:nth-of-type(2) {
+  margin-bottom: 20px;
+}
+
+.article p:nth-of-type(3) {
+  margin-bottom: 10px;
 }
 
 .shipping {
@@ -32,13 +51,20 @@ a:link:hover {
 h2 {
   text-transform: uppercase;
   font-size: 18px;
+  margin: 20px 0;
 }
 
 ul {
   list-style-type: square;
+  margin-left: 25px;
+}
+
+li {
+  margin-bottom: 10px;
 }
 
 button {
+  width: 100%;
   text-transform: uppercase;
   color: white;
   background-color: black;
